# rust-wkd-server

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  release-plz.toml  renovate.json
.github/: dependabot.yml  mergify.yml
.github/workflows/: build.yaml  check.yaml  publish.yaml  release-plz.yaml  release.yml
openpgp/policy/: default
src/: config.rs  main.rs
src/http/: errors.rs  host.rs  keys.rs  mod.rs  policy.rs
src/keys/: db.rs  fs.rs  hash.rs  mod.rs
src/policy/: fs.rs
src/utils/: keys.rs
