[package]
name = "wkd-server"
version = "1.2.4"
edition = "2021"
repository = "https://github.com/martin-fink/rust-wkd-server"
description = "A WKD server"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["tower-log"] }
axum-extra = "0.10.0-rc.1"
clap = { version = "4.5.32", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
notify = "8.0.0"
once_cell = "1.21.0"
regex = "1.11.1"
sequoia-openpgp = { version = "2.0.0", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
sha1 = { version = "0.10.6", features = ["sha1-asm"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
zbase32 = "0.1.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

