[package]
name = "wkd-server"
version = "2.0.1"
edition = "2024"
repository = "https://github.com/martin-fink/rust-wkd-server"
description = "A WKD server"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["tower-log"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
clap = { version = "4.5.61", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.9"
notify = "8.2.0"
once_cell = "1.21.4"
regex = "1.12.3"
sequoia-openpgp = { version = "2.2.0", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
sha1 = { version = "0.10.6", features = ["sha1-asm"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
zbase32 = "0.1.2"
serde = { version = "1.0.228", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

